--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -5,6 +5,9 @@ repositories:
  - name: ollama-helm
    url: https://otwld.github.io/ollama-helm
 
+ - name: gitea
+   url: https://dl.gitea.io/charts
+
 releases:
   - name: myhelloworld
     chart: ./helloworld
@@ -25,3 +28,10 @@ releases:
   - name: llama-webui
     chart: ./llama-webui
     installed: false
+
+  - name: gitea
+    chart: gitea/gitea
+    installed: true
+    values:
+      - chart-values/gitea-values.yaml
+
