--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -213,4 +213,8 @@ releases:
 
   - name: prod-pb
     chart: ./prod-pb
+    installed: false
+
+  - name: prod-sk
+    chart: ./prod-sk
     installed: true
