--- a/pvc/live-ide-pvc.yaml
+++ b/pvc/live-ide-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: ide-pv-volume
+  name: live-ide-pv-volume
 spec:
   capacity:
     storage: 10Gi  # Specify the storage capacity for the PV
@@ -11,7 +11,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain  # How the volume should be handled when released
   storageClassName: local-storage
   local:
-    path: "/config/workspace"
+    path: "/config/live-workspace"
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -26,10 +26,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ide-claim0
+  name: live-ide-claim
 spec:
   storageClassName: local-storage  # Specify the storage class
-  volumeName: ide-pv-volume
+  volumeName: live-ide-pv-volume
   accessModes:
     - ReadWriteOnce
   resources:
