--- a/penpot/templates/penpot-backend-service.yaml
+++ b/penpot/templates/penpot-backend-service.yaml
@@ -15,6 +15,6 @@ spec:
       targetPort: 6060
   selector:
     io.kompose.service: penpot-backend
-  type: LoadBalancer
+  type: ClusterIP
 # status:
 #   loadBalancer: {}
