--- a/argocd-deployment.yaml
+++ b/argocd-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: charts-testing-01
+  name: happy-computing
   namespace: argocd
 spec:
   project: default
@@ -13,18 +13,194 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default
   sources:
-    - repoURL: https://github.com/abdurrehman11/helm-charts-argocd
-      path: charts/chart1
-      targetRevision: HEAD
-    - repoURL: https://github.com/abdurrehman11/helm-charts-argocd
-      path: charts/chart2
-      targetRevision: HEAD
+    - repoURL: https://charts.truecharts.org
+      chart: flame
+      targetRevision: 5.8.9
+      helm:
+        valueFiles:
+        - $values/chart-values/flame-values.yaml
+
     - repoURL: https://otwld.github.io/ollama-helm
       chart: ollama
       targetRevision: 0.23.0
       helm:
         valueFiles:
         - $values/chart-values/ollama-values.yaml
-    - repoURL: https://github.com/abdurrehman11/helm-charts-argocd
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/llama-webui
+      targetRevision: HEAD
+
+    - repoURL: https://dl.gitea.io/charts
+      chart: gitea
+      targetRevision: 10.1.4
+      helm:
+        valueFiles:
+        - $values/chart-values/gitea-values.yaml
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/maintenance
+      targetRevision: HEAD
+
+    - repoURL: https://code-server-boilerplates.github.io/charts
+      chart: code-server
+      targetRevision: 1.0.3
+      helm:
+        valueFiles:
+        - $values/chart-values/ide-values.yaml
+
+    - repoURL: https://groundhog2k.github.io/helm-charts
+      chart: postgres
+      targetRevision: 1.4.2
+      helm:
+        valueFiles:
+        - $values/chart-values/ap-postgres-values.yaml
+
+    - repoURL: https://charts.bitnami.com/bitnami
+      chart: redis
+      targetRevision: 19.1.3
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/activepieces
+      targetRevision: HEAD
+
+    - repoURL: https://nicholaswilde.github.io/helm-charts/
+      chart: etherpad
+      targetRevision: 1.0.2
+      helm:
+        valueFiles:
+        - $values/chart-values/etherpad-values.yaml
+
+    - repoURL: https://charts.truecharts.org
+      chart: neko
+      targetRevision: 6.1.13
+      helm:
+        valueFiles:
+        - $values/chart-values/neko-values.yaml
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/ibga
+      targetRevision: HEAD
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/glances
+      targetRevision: HEAD
+
+    - repoURL: https://groundhog2k.github.io/helm-charts
+      chart: mariadb
+      targetRevision: 3.1.0
+      helm:
+        valueFiles:
+        - $values/chart-values/prism-db-values.yaml
+
+    - repoURL: https://charts.truecharts.org
+      chart: photoprism
+      targetRevision: 21.0.8
+      helm:
+        valueFiles:
+        - $values/chart-values/prism-values.yaml
+
+    - repoURL: https://charts.gabe565.com
+      chart: vaultwarden
+      targetRevision: 0.12.1
+      helm:
+        valueFiles:
+        - $values/chart-values/vaultwarden-values.yaml
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/unbound
+      targetRevision: HEAD
+
+    - repoURL: https://mojo2600.github.io/pihole-kubernetes/
+      chart: pihole
+      targetRevision: 2.23.0
+      helm:
+        valueFiles:
+        - $values/chart-values/pihole-values.yaml
+
+    - repoURL: https://bryopsida.github.io/wireguard-chart
+      chart: wireguard
+      targetRevision: 0.23.0
+      helm:
+        valueFiles:
+        - $values/chart-values/wireguard-values.yaml
+
+    - repoURL: https://geek-cookbook.github.io/charts/
+      chart: error-pages
+      targetRevision: 1.2.2
+      helm:
+        valueFiles:
+        - $values/chart-values/error-pages-values.yaml
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/pinnwand
+      targetRevision: HEAD
+
+    - repoURL: https://charts.truecharts.org
+      chart: node-red
+      targetRevision: 18.8.10
+      helm:
+        valueFiles:
+        - $values/chart-values/nodered-values.yaml
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/penpot
+      targetRevision: HEAD
+
+    - repoURL: https://charts.truecharts.org
+      chart: browserless-chrome
+      targetRevision: 9.8.9
+
+    - repoURL: https://charts.alekc.dev
+      chart: qbittorrent
+      targetRevision: 1.1.1
+      helm:
+        valueFiles:
+        - $values/chart-values/qbittorrent-values.yaml
+
+    - repoURL: https://charts.christianhuth.de
+      chart: umami
+      targetRevision: 3.1.1
+      helm:
+        valueFiles:
+        - $values/chart-values/umami-values.yaml
+
+    - repoURL: https://qjoly.github.io/helm-charts/
+      chart: jackett
+      targetRevision: 1.0.0
+
+    - repoURL: https://charts.truecharts.org
+      chart: syncthing
+      targetRevision: 18.8.10
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/rapidbay
+      targetRevision: HEAD
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/dev-pb
+      targetRevision: HEAD
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/dev-sk
+      targetRevision: HEAD
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/prod-pb
+      targetRevision: HEAD
+
+    - repoURL: https://github.com/304442/infra
+      path: charts/prod-sk
+      targetRevision: HEAD
+
+    - repoURL: https://code-server-boilerplates.github.io/charts
+      chart: code-server
+      targetRevision: 1.0.3
+      helm:
+        valueFiles:
+        - $values/chart-values/live-ide-values.yaml
+
+    - repoURL: https://github.com/304442/infra
       targetRevision: HEAD
       ref: values
+
