--- a/traefik-ingress/argocd-ui-ingress.yaml
+++ b/traefik-ingress/argocd-ui-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: whoami-ingress
-  namespace: default
+  name: argocd-ui-ingress
+  namespace: argocd
 spec:
   ingressClassName: traefik
   rules:
   - host: example.ardevops.life
     http:
       paths:
-      - pathType: Prefix
-        path: /sample-2
+      - path: /
+        pathType: Prefix
         backend:
           service:
-            name: sample-1
+            name: argocd-server
             port:
-              number: 3000
+              number: 80
