etherpad ingress rule

--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -61,3 +61,13 @@ spec:
             port:
               number: 8443
 
+  - host: sample-6.ardevops.life
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: charts-testing-01-etherpad
+            port:
+              number: 9001
