--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -71,3 +71,14 @@ spec:
             name: charts-testing-01-etherpad
             port:
               number: 9001
+
+  - host: sample-7.ardevops.life
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: charts-testing-01-neko
+            port:
+              number: 10294
