--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -9,6 +9,8 @@ spec:
   ingressClassName: traefik
   tls:
    - hosts:
+       - errorpages.happycloudcomputing.com
+       - pihole.happycloudcomputing.com
        - vaultwarden.happycloudcomputing.com
        - neko.happycloudcomputing.com
        - ibga.happycloudcomputing.com
@@ -22,6 +24,28 @@ spec:
        - etherpad.happycloudcomputing.com 
      secretName: happy-tls-secret
   rules:
+  - host: errorpages.happycloudcomputing.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: charts-testing-01-error-pages
+            port:
+              number: 8080
+
+  - host: pihole.happycloudcomputing.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: charts-testing-01-pihole-web
+            port:
+              number: 80
+
   - host: vaultwarden.happycloudcomputing.com
     http:
       paths:
