--- a/chart-values/qbittorrent-values.yaml
+++ b/chart-values/qbittorrent-values.yaml
@@ -5,6 +5,15 @@ env:
   UMASK_SET: "022"
   WEBUI_PORT: "8093"
 
+metrics:
+  enabled: true
+  exporter:
+    env:
+      user: "admin"
+      password: "adminadmin"
+      port: 9022
+      logLevel: INFO
+
 webService:
   type: ClusterIP
   port: 8080
