rapidbay ingress rule

--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -9,6 +9,7 @@ spec:
   ingressClassName: traefik
   tls:
    - hosts:
+       - rapidbay.happycloudcomputing.com
        - jackett.happycloudcomputing.com
        - qbit.happycloudcomputing.com
        - browser.happycloudcomputing.com
@@ -30,6 +31,17 @@ spec:
        - etherpad.happycloudcomputing.com 
      secretName: happy-tls-secret
   rules:
+  - host: rapidbay.happycloudcomputing.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: charts-testing-01-rapidbay
+            port:
+              number: 5000
+
   - host: jackett.happycloudcomputing.com
     http:
       paths:
